# prototypes

./: README.md  launch-all.sh
chronicle/: .env.example  .gitignore  LICENSE  README.md  backup.py  generate_sample_data.py  main.py  requirements.txt  start.sh
chronicle/templates/: index.html
dataverse/: .gitignore  README.md  generate_samples.py  main.py  requirements.txt  start.sh
dataverse/data/samples/: covid_cases.csv  planetary_data.csv  population.csv  sales_data.csv  stock_prices.csv
dataverse/static/css/: style.css
dataverse/static/js/: app.js  (+1 more)
dataverse/templates/: index.html
filedrop/: README.md  main.py
filedrop/templates/: index.html
medflow/: README.md  main.py  requirements.txt  setup.sh
medflow/templates/: builder.html  index.html
prompt-guard/: README.md  main.py  requirements.txt  setup.sh
prompt-guard/templates/: index.html  results.html
queryflow/: README.md  main.py  requirements.txt  setup.sh
queryflow/templates/: analytics.html  index.html  queries.html  query_detail.html
screenlink/: README.md  main.py  requirements.txt
screenlink/templates/: index.html  room.html
statuspulse/: README.md  main.py  requirements.txt
statuspulse/templates/: history.html  incident_detail.html  public_status.html
text-editor/: AI_AGENTS.md  BUILD.md  FEATURES.md  QUERY_PANEL_SUMMARY.md  README.md  RESEARCH.md  UI.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
text-editor/src/: App.tsx  index.css
text-editor/src-tauri/: Cargo.toml  tauri.conf.json
text-editor/src-tauri/src/: main.rs
(+30 files in other folders)
